# useful-tools

./: .gitignore  README.md
clone-tags/: README.md  clone_tags.py  pyproject.toml
jupyter-docker/: docker-compose.yaml  readme.md
normusic/: README.md  normalize_audio_filenames.py  pyproject.toml
set-s3-download/: set-s3-download.sh
ssh-key-usage/: README.md
vectordb-weaviate/: README.md  docker-compose.yml
