[project]
name = "normusic"
version = "0.1.0"
description = "Normalize WAV and MP3 filenames in a directory."
requires-python = ">=3.13,<3.14"

[project.scripts]
normusic = "normalize_audio_filenames:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["normalize_audio_filenames.py"]
